# redcoreOS

./: .gitignore  CLAUDE.md  CODEXHANDOFF.md  CONTRIBUTING.md  CoWorkClaude.md  ECOBUGHUNTERCLAUDE.md  LICENSE  README.md  RELEASE-READINESS.md  SECURITY.md  eco-site-bugs.md  ecosystem.config.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  tsconfig.base.json
.agents/subagents/: bloatware-cleaner.md  display-configurator.md  driver-updater.md  gpu-tuner.md  memory-optimizer.md  network-optimizer.md  registry-auditor.md  rollback-manager.md  security-hardener.md  service-manager.md  startup-optimizer.md  storage-optimizer.md  system-analyzer.md
.claude/tuning/: settings.local.json
.github/workflows/: build-installers.yml  build-release.yml  ci.yml  os-windows-proof.yml  release.yml  tuning-windows-proof.yml  validate-tauri-migration.yml
apps/cloud-api/: drizzle.config.ts  env.example  package.json  tsconfig.json
apps/os-api/: drizzle.config.ts  package.json  tsconfig.json
apps/os-desktop/: .gitattributes  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts
apps/os-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.conf.mac.json  tauri.conf.production.json
apps/os-desktop/src-tauri/capabilities/: default.json
apps/os-desktop/src-tauri/src/: apbx.rs  lib.rs  main.rs  service_bridge.rs
apps/os-website/: index.html
apps/redcore-os/: .gitignore  package.json  pnpm-lock.yaml
apps/redcore-tuning/: .gitignore  BUGHUNTERCLAUDE.md  package.json  pnpm-lock.yaml
apps/redcore-web/: .npmrc_builds  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/tuning-api/: package.json  tsconfig.json
apps/tuning-desktop/: package.json  tailwind.config.ts  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  (+2 more)
docs/: ame-wizard-guide.md
playbooks/: manifest.yaml  wizard.json
scripts/: build-and-publish-os-release-clean.sh  build-and-publish-os-release.sh  build-os-apbx-package.ts  build-os-wizard-package.mjs  capture-reboot-proof.ps1  capture-windows-proof.ps1  check-redcore-os-open-source.sh  consumer-windows-proof.ps1  db-converge.mjs  deploy-vds.sh  deploy.sh  gen-social.mjs  gen-technical-details.mjs  generate-app-icons.mjs  generate-brand-icons.py  generate-os-playbook-fallback-data.mjs  prepare-redcore-os-open-source.sh  release-gate.mjs  seal-proof-bundle.mjs  setup-selfhosted-mail.sh  smoke-test-os-service.mjs  stage-os-iso-injection.ps1  sync-desktop-brand-assets.sh  sync-os-wizard-metadata.ts  sync-web-standalone-assets.sh  tauri-smoke-checklist.md  validate-action-parity.mjs  validate-proof.mjs  validate-tauri-bridge.mjs  vds-deploy.sh  vds-install-hermes-and-fix-web.sh  vds-setup.sh
services/os-service/: Cargo.toml
services/os-service/src/: appbundle.rs  assessor.rs  classifier.rs  db.rs  engine.rs  executor.rs  ipc.rs  ledger.rs  main.rs  migrate.rs  personalizer.rs  playbook.rs  powershell.rs  rollback.rs  transformer.rs
services/tuning-service/: Cargo.toml
services/tuning-service/src/: apphub.rs  benchmark.rs  compatibility.rs  db.rs  error.rs  executor.rs  intelligence.rs  ipc.rs  journal.rs  license.rs  powershell.rs  rollback.rs
(+585 files in other folders)
