[package]
name = "redcore-service"
version = "0.1.0"
edition = "2021"
description = "Privileged orchestration service for redcore-Tuning"
license = "LicenseRef-Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# IPC
interprocess = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (for license validation)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Crypto (for device fingerprint, license token verification)
sha2 = "0.10"
hmac = "0.12"

# Windows-only APIs
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_SystemInformation",
    "Win32_System_Power",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_System_Diagnostics_Etw",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Graphics_Dxgi",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_Shell",
]}
wmi = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
