[package]
name = "redcore-os-desktop"
version = "0.1.1"
description = "redcore OS desktop app"
authors = ["redcore"]
edition = "2021"

[lib]
name = "redcore_os_desktop"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "time"] }
open = "5"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
